# Due

./: .gitignore  Pipfile  README.md  pylintrc  pyproject.toml  run_example.py  setup.py  toy.py
doc/: Makefile  conf.py  event.rst  make.bat
docs/: action.rst  agent.rst  conf.py  corpora.rst  episode.rst  framework.rst  index.rst  models.rst  nlp.rst  persistence.rst  serving.rst  util.rst
docs/_build/doctrees/: action.doctree  agent.doctree  brain.doctree  environment.pickle  episode.doctree  event.doctree  index.doctree  persistence.doctree
docs/_build/html/: .buildinfo  action.html  agent.html  brain.html  episode.html  event.html  genindex.html  index.html  objects.inv  persistence.html  py-modindex.html  search.html  searchindex.js
due/: __init__.py  action.py  agent.py  brain.py  due.py  episode.py  event.py  persistence.py  resource_index.yaml  test_agent.py  test_brain.py  test_due.py  test_episode.py  test_event.py  test_persistence.py  test_util.py  util.py  xmpp.py
due/corpora/: cornell.py  toy.py  toy.yaml
due/corpora/tv/: friends.py
due/models/: dummy.py  echo.py  seq2seq.py  test_seq2seq.py  test_tfidf.py  test_vector_similarity.py  tfidf.py  vector_similarity.py
due/nlp/: batches.py  preprocessing.py  test_batches.py  test_vocabulary.py  vocabulary.py
due/serve/: console.py  telegram.py  xmpp.py
due/util/: capture_io.py  python.py  resources.py  test_python.py  test_resources.py  test_time.py  time.py
notebooks/: EncoderDecoderCornell.ipynb  EncoderDecoderTraining.ipynb  cosine-similarity-experiments.ipynb  due-base-sandbox.ipynb
(+8 files in other folders)
