[tool.poetry]
name = "due"
version = "0.1.dev3"
description = "An episodic, multi-model, servable framework for Dialog Systems"
authors = ["Dario Chiappetta <dario.chi@inventati.org>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
future = "^0.18.2"
six = "^1.13"
numpy = "^1.17"
scipy = "^1.3"
sleekxmpp = "=1.3.1"
sklearn = "^0.0.0"
nltk = "^3.4"
python-magic = "^0.4.15"
pyyaml = "^5.2"
tqdm = "^4.40"
pandas = "^0.25.3"
spacy = "^2.2"
gensim = "^3.8"
python-dateutil = "^2.8"
torch = "^1.3"
pyasn1 = "=0.3.7"
pyasn1_modules = "*"
importlib_resources = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pylint = "^2.4"
sphinx = "^2.2"
jupyterlab = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
